--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,126 +1,130 @@
-2021-02-03 三谷産業フェア★金沢 #fundhunt due:2020-09-01
-2021-02-03 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
-2021-02-03 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
-2021-02-03 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
-2021-02-03 ▲愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
-2021-02-03 東京通信大学・情報システム・データサイエンス分野 #jobhunt due:2021-01-31
-2021-02-03 ●静岡理工科大学（ソフトウェア開発を基盤とする、知能情報や感性情報処理に関連する分野） #jobhunt due:2021-02-01
-2021-02-03 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2021-02-03
-2021-02-03 kindle #current due:2021-02-03
-2021-02-03 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2021-02-03
-2021-02-03 wifi dongle @ home #current due:2021-02-03
-2021-02-03 ACM.SIGMODw.bigdata.dist.envs #deadlines due:2021-02-04
-2021-02-03 IEEE.ComSoc.CQR.quality.reliability #deadlines due:2021-02-05
-2021-02-03 名古屋大学・行動信号処理分野 #jobhunt due:2021-02-05
-2021-02-03 IFIP.newtech.mobility.security #deadlines due:2021-02-07
-2021-02-03 INFOCOM.demos.posters #deadlines due:2021-02-07
-2021-02-03 (+J)SAM.security.management #deadlines due:2021-02-08
-2021-02-03 IEEE.SECON.sending.comm.net #deadlines due:2021-02-08
-2021-02-03 IEEE.paralle.dist.processing #deadlines due:2021-02-08
-2021-02-03 IEEE.secon.sending.comm.netwoking #deadlines due:2021-02-08
-2021-02-03 東京工業大学・教授の公募（ソフトウェア工学分野） #jobhunt due:2021-02-09
-2021-02-03 (3) docomocycle data collect #regulars due:2021-02-10
-2021-02-03 ① money (weekly) #regulars due:2021-02-10
-2021-02-03 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2021-02-10
-2021-02-03 COMPSAC.collaborating.world #deadlines due:2021-02-12
-2021-02-03 中央学院大学・情報数学他 #jobhunt due:2021-02-12
-2021-02-03 audio automation for open campus #midterm due:2021-02-13
-2021-02-03 kgu zemi faces #midterm due:2021-02-13
-2021-02-03 samsung redo cygwin #midterm due:2021-02-13
-2021-02-03 simplify yalms #midterm due:2021-02-13
-2021-02-03 tokyo hotels and schedule #midterm due:2021-02-13
-2021-02-03 video recognition engine (sotsuken) #midterm due:2021-02-13
-2021-02-03 (J)MDPI.electronics.deepleaning #deadlines due:2021-02-15
-2021-02-03 (J)MDPI.sensors.internet.of.things #deadlines due:2021-02-15
-2021-02-03 EAI.WiCOM.wireless #deadlines due:2021-02-15
-2021-02-03 IEEE.ACM.IWQoS.qos #deadlines due:2021-02-15
-2021-02-03 IEEE.ISIE.industry.electronics #deadlines due:2021-02-15
-2021-02-03 (J)JCN.covid19 #deadlines due:2021-02-20
-2021-02-03 (J)MDPI.smartcities.traffic.sensors.IoT #deadlines due:2021-02-20
-2021-02-03 (J)MDPI.Telecom.Journal #deadlines due:2021-02-21
-2021-02-03 (J)MDPI.mobile.computing #deadlines due:2021-02-21
-2021-02-03 LANMAN.networking.is.new.normal #deadlines due:2021-02-22
-2021-02-03 ⒿIEEEJ.intell.wireless.control.systems #deadlines due:2021-02-25
-2021-02-03 大阪大学・機械工学・情報学 #jobhunt due:2021-02-25
-2021-02-03 ●大和大学（3jobs） #jobhunt due:2021-02-26
-2021-02-03 (J)Elsevier.ICN(blockchain.for.covid) #deadlines due:2021-02-28
-2021-02-03 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
-2021-02-03 京都情報大学院大学・情報学分野 #jobhunt due:2021-02-28
-2021-02-03 国際基督教大学・人間情報学・情報学フロンティアor情報学基礎 #jobhunt due:2021-02-28
-2021-02-03 国際基督教大学・情報学基礎、計算基盤（准教授、教授公募） #jobhunt due:2021-02-28
-2021-02-03 岩手大学・知能・メディア情報コース 准教授公募 #jobhunt due:2021-02-28
-2021-02-03 岩手大学・知能・メディア情報コース・准教授公募 #jobhunt due:2021-02-28
-2021-02-03 東京国際大学・データサイエンス、AI等分野 #jobhunt due:2021-02-28
-2021-02-03 東京国際大学・教授、准教授、または講師の公募（データサイエンス、AI等分野） #jobhunt due:2021-02-28
-2021-02-03 株式会社ベイシスコンサルティング・リサーチャー募集 #jobhunt due:2021-02-28
-2021-02-03 武庫川女子大学・情報セキュリティ分野 #jobhunt due:2021-02-28
-2021-02-03 武庫川女子大学・情報ネットワーク分野 #jobhunt due:2021-02-28
-2021-02-03 武庫川女子大学・経営情報分野 #jobhunt due:2021-02-28
-2021-02-03 (J)IEET.green.internet.and.services #deadlines due:2021-03-01
-2021-02-03 (J)Springer.queueing.learning.control #deadlines due:2021-03-01
-2021-02-03 Springer.dataintensive.cluster #deadlines due:2021-03-01
-2021-02-03 adobe @ work, home #longterm due:2021-03-05
-2021-02-03 windows auth @ zaniya #longterm due:2021-03-05
-2021-02-03 IEEE.FiCloud.iot.cloud #deadlines due:2021-03-10
-2021-02-03 LNCS.mobiwis.mobileweb.intelligentsystems #deadlines due:2021-03-10
-2021-02-03 ficloud.future.cloud #deadlines due:2021-03-10
-2021-02-03 サイエンス・テクノロジー・システムズ株式会社・サイエンティフィック コンサルタント #jobhunt due:2021-03-10
-2021-02-03 公益社団法人国際経済労働研究所・データ分析研究員募集 #jobhunt due:2021-03-11
-2021-02-03 ★青山学院大学・経済学部経済学科・統計学・データサイエンス #jobhunt due:2021-03-12
-2021-02-03 (J)IEEEWComm.AI.assisted.wcomm #deadlines due:2021-03-15
-2021-02-03 (J)MDPI.drone.swarms #deadlines due:2021-03-15
-2021-02-03 CloudConf.KSEM@tokyo #deadlines due:2021-03-15
-2021-02-03 KSEM.knowledge #deadlines due:2021-03-15
-2021-02-03 神奈川工科大学・情報学部・情報工学科 #jobhunt due:2021-03-15
-2021-02-03 Elsevier.FNC.future.nets #deadlines due:2021-03-19
-2021-02-03 北海道大学・メディアネットワーク部門・情報通信システム学分野・教授 #jobhunt due:2021-03-19
-2021-02-03 香川大学・創造工学部 准教授・講師または助教の公募（情報通信コース） #jobhunt due:2021-03-19
-2021-02-03 ⒿIEEEsensors.inforpositioning #deadlines due:2021-03-21
-2021-02-03 名古屋大学大学院工学研究科・情報・通信工学専攻 #jobhunt due:2021-03-22
-2021-02-03 IFIP.future.internet.transport #deadlines due:2021-03-25
-2021-02-03 IEEE.DCOSS.urban.computing #deadlines due:2021-03-26
-2021-02-03 ★東京理科大学・工学部情報工学科・インテリジェントシステム分野 #jobhunt due:2021-03-29
-2021-02-03 (J)JNSM.beyond5G #deadlines due:2021-03-30
-2021-02-03 IEEE.ATC.trusted.computing #deadlines due:2021-03-30
-2021-02-03 (J)ACMIntTechJ.multiagent.systems.for.IoT #deadlines due:2021-03-31
-2021-02-03 (J)ACMtran.comp.ling.multimedia.IoT #deadlines due:2021-03-31
-2021-02-03 (J)Elsevier(edge.iot) #deadlines due:2021-03-31
-2021-02-03 (J)Elsevier.smart.veh.in.6G #deadlines due:2021-03-31
-2021-02-03 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
-2021-02-03 BRAINS.blockchain #deadlines due:2021-03-31
-2021-02-03 名古屋大学・知能情報学分野 #jobhunt due:2021-03-31
-2021-02-03 東京工業大学・応用数理分野 #jobhunt due:2021-03-31
-2021-02-03 清水建設株式会社・民間企業の研究員（３D計測技術・ロボティクス） #jobhunt due:2021-03-31
-2021-02-03 福岡大学工学部電子情報工学科 #jobhunt due:2021-03-31
-2021-02-03 鳥取大学工学部教員公募（ロボティクス） #jobhunt due:2021-03-31
-2021-02-03 (J)MDPI.ai.things.readtime.datamon #deadlines due:2021-04-01
-2021-02-03 ITC.teletraffic.congress #deadlines due:2021-04-02
-2021-02-03 (J)IEEE.VTechMag.6gapps #deadlines due:2021-04-05
-2021-02-03 関西大学・ソフトウェア工学 #jobhunt due:2021-04-12
-2021-02-03 EAI.MONAMI.japan.mobile.nets #deadlines due:2021-04-13
-2021-02-03 (J)MDPI.sensors.intelligent.vehicles #deadlines due:2021-04-15
-2021-02-03 GLOBECOM #deadlines due:2021-04-15
-2021-02-03 bestat株式会社・技術責任者・CTO #jobhunt due:2021-04-15
-2021-02-03 東京都市大学・経営情報システム #jobhunt due:2021-04-16
-2021-02-03 東北大学・情報リテラシー論分野 #jobhunt due:2021-04-22
-2021-02-03 群馬大学・情報通信分野 #jobhunt due:2021-04-23
-2021-02-03 香川大学・創造工学部・准教授または講師の公募（機械システムコース） #jobhunt due:2021-04-23
-2021-02-03 東京工科大学コンピュータサイエンス学部・人工知能 #jobhunt due:2021-04-26
-2021-02-03 岩手大学・知能・メディア情報コース 准教授公募（知能情報学関連分野） #jobhunt due:2021-04-30
-2021-02-03 知能情報学関連分野 #jobhunt due:2021-04-30
-2021-02-03 ACM.GoodIT #deadlines due:2021-05-01
-2021-02-03 (J)tailor.digitaltwin #deadlines due:2021-05-05
-2021-02-03 岡山理科大学・准教授・講師または助教（計算機工学，コンピュータシステム分野） #jobhunt due:2021-05-10
-2021-02-03 (J)wiley.SPE.highperfcomp.apps #deadlines due:2021-05-31
-2021-02-03 株式会社ヒューマノーム研究所(5jobs) #jobhunt due:2021-05-31
-2021-02-03 青山学院大学理工学部電気電子工学科 #jobhunt due:2021-05-31
-2021-02-03 (J)MDPI.cloud.based.iot.smartcities #deadlines due:2021-06-01
-2021-02-03 ⒿMDPI.HPC.math #deadlines due:2021-06-30
-2021-02-03 トヨタ自動車株式会社・スマートシティプラットフォームの開発 #jobhunt due:2021-06-30
-2021-02-03 株式会社キーウォーカー【AI企業】自然言語処理研究員・エンジニア募集 #jobhunt due:2021-06-30
-2021-02-03 (J)MDPI.energy.in.networks #deadlines due:2021-07-01
-2021-02-03 能美防災株式会社・センサシステムに関するソフトウェアの製品開発業務 #jobhunt due:2021-07-18
-2021-02-03 能美防災株式会社・センサ応用製品に関する研究開発業務 #jobhunt due:2021-07-19
-2021-02-03 (J)BigDataJournal.perfmanagment.large.clusters #deadlines due:2021-07-31
-2021-02-03 ★株式会社アラヤ・リサーチャー (強化学習) #jobhunt due:2021-08-31
-2021-02-03 ★株式会社アラヤ・計算論的神経科学者・情報理論学者 #jobhunt due:2021-08-31
+2021-02-11 三谷産業フェア★金沢 #fundhunt due:2020-09-01
+2021-02-11 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
+2021-02-11 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
+2021-02-11 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
+2021-02-11 ▲愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
+2021-02-11 東京通信大学・情報システム・データサイエンス分野 #jobhunt due:2021-01-31
+2021-02-11 ●静岡理工科大学（ソフトウェア開発を基盤とする、知能情報や感性情報処理に関連する分野） #jobhunt due:2021-02-01
+2021-02-11 ACM.SIGMODw.bigdata.dist.envs #deadlines due:2021-02-04
+2021-02-11 IEEE.ComSoc.CQR.quality.reliability #deadlines due:2021-02-05
+2021-02-11 IFIP.newtech.mobility.security #deadlines due:2021-02-07
+2021-02-11 INFOCOM.demos.posters #deadlines due:2021-02-07
+2021-02-11 (+J)SAM.security.management #deadlines due:2021-02-08
+2021-02-11 IEEE.SECON.sending.comm.net #deadlines due:2021-02-08
+2021-02-11 IEEE.paralle.dist.processing #deadlines due:2021-02-08
+2021-02-11 IEEE.secon.sending.comm.netwoking #deadlines due:2021-02-08
+2021-02-11 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2021-02-11
+2021-02-11 kindle #current due:2021-02-11
+2021-02-11 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2021-02-11
+2021-02-11 wifi dongle @ home #current due:2021-02-11
+2021-02-11 COMPSAC.collaborating.world #deadlines due:2021-02-12
+2021-02-11 (J)MDPI.electronics.deepleaning #deadlines due:2021-02-15
+2021-02-11 (J)MDPI.sensors.internet.of.things #deadlines due:2021-02-15
+2021-02-11 EAI.WiCOM.wireless #deadlines due:2021-02-15
+2021-02-11 IEEE.ACM.IWQoS.qos #deadlines due:2021-02-15
+2021-02-11 IEEE.ISIE.industry.electronics #deadlines due:2021-02-15
+2021-02-11 (3) docomocycle data collect #regulars due:2021-02-18
+2021-02-11 ① money (weekly) #regulars due:2021-02-18
+2021-02-11 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2021-02-18
+2021-02-11 (J)JCN.covid19 #deadlines due:2021-02-20
+2021-02-11 (J)MDPI.smartcities.traffic.sensors.IoT #deadlines due:2021-02-20
+2021-02-11 (J)MDPI.Telecom.Journal #deadlines due:2021-02-21
+2021-02-11 (J)MDPI.mobile.computing #deadlines due:2021-02-21
+2021-02-11 audio automation for open campus #midterm due:2021-02-21
+2021-02-11 kgu zemi faces #midterm due:2021-02-21
+2021-02-11 samsung redo cygwin #midterm due:2021-02-21
+2021-02-11 simplify yalms #midterm due:2021-02-21
+2021-02-11 tokyo hotels and schedule #midterm due:2021-02-21
+2021-02-11 video recognition engine (sotsuken) #midterm due:2021-02-21
+2021-02-11 LANMAN.networking.is.new.normal #deadlines due:2021-02-22
+2021-02-11 ⒿIEEEJ.intell.wireless.control.systems #deadlines due:2021-02-25
+2021-02-11 大阪大学・機械工学・情報学 #jobhunt due:2021-02-25
+2021-02-11 ●大和大学（3jobs） #jobhunt due:2021-02-26
+2021-02-11 (J)Elsevier.ICN(blockchain.for.covid) #deadlines due:2021-02-28
+2021-02-11 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
+2021-02-11 京都情報大学院大学・情報学分野 #jobhunt due:2021-02-28
+2021-02-11 国際基督教大学・人間情報学・情報学フロンティアor情報学基礎 #jobhunt due:2021-02-28
+2021-02-11 国際基督教大学・情報学基礎、計算基盤（准教授、教授公募） #jobhunt due:2021-02-28
+2021-02-11 岩手大学・知能・メディア情報コース 准教授公募 #jobhunt due:2021-02-28
+2021-02-11 岩手大学・知能・メディア情報コース・准教授公募 #jobhunt due:2021-02-28
+2021-02-11 東京国際大学・データサイエンス、AI等分野 #jobhunt due:2021-02-28
+2021-02-11 東京国際大学・教授、准教授、または講師の公募（データサイエンス、AI等分野） #jobhunt due:2021-02-28
+2021-02-11 株式会社ベイシスコンサルティング・リサーチャー募集 #jobhunt due:2021-02-28
+2021-02-11 武庫川女子大学・情報セキュリティ分野 #jobhunt due:2021-02-28
+2021-02-11 武庫川女子大学・情報ネットワーク分野 #jobhunt due:2021-02-28
+2021-02-11 武庫川女子大学・経営情報分野 #jobhunt due:2021-02-28
+2021-02-11 (J)IEET.green.internet.and.services #deadlines due:2021-03-01
+2021-02-11 (J)Springer.queueing.learning.control #deadlines due:2021-03-01
+2021-02-11 Springer.dataintensive.cluster #deadlines due:2021-03-01
+2021-02-11 東京国際工科専門職大学・プログラミング関連 #jobhunt due:2021-03-01
+2021-02-11 東京国際工科専門職大学・通信・コンピュータ分野 #jobhunt due:2021-03-01
+2021-02-11 盛岡大学・情報処理 #jobhunt due:2021-03-01
+2021-02-11 IEEE.FiCloud.iot.cloud #deadlines due:2021-03-10
+2021-02-11 LNCS.mobiwis.mobileweb.intelligentsystems #deadlines due:2021-03-10
+2021-02-11 ficloud.future.cloud #deadlines due:2021-03-10
+2021-02-11 サイエンス・テクノロジー・システムズ株式会社・サイエンティフィック コンサルタント #jobhunt due:2021-03-10
+2021-02-11 公益社団法人国際経済労働研究所・データ分析研究員募集 #jobhunt due:2021-03-11
+2021-02-11 ★青山学院大学・経済学部経済学科・統計学・データサイエンス #jobhunt due:2021-03-12
+2021-02-11 adobe @ work, home #longterm due:2021-03-13
+2021-02-11 windows auth @ zaniya #longterm due:2021-03-13
+2021-02-11 (J)IEEEWComm.AI.assisted.wcomm #deadlines due:2021-03-15
+2021-02-11 (J)MDPI.drone.swarms #deadlines due:2021-03-15
+2021-02-11 CloudConf.KSEM@tokyo #deadlines due:2021-03-15
+2021-02-11 KSEM.knowledge #deadlines due:2021-03-15
+2021-02-11 神奈川工科大学・情報学部・情報工学科 #jobhunt due:2021-03-15
+2021-02-11 Elsevier.FNC.future.nets #deadlines due:2021-03-19
+2021-02-11 北海道大学・メディアネットワーク部門・情報通信システム学分野・教授 #jobhunt due:2021-03-19
+2021-02-11 香川大学・創造工学部 准教授・講師または助教の公募（情報通信コース） #jobhunt due:2021-03-19
+2021-02-11 ⒿIEEEsensors.inforpositioning #deadlines due:2021-03-21
+2021-02-11 名古屋大学大学院工学研究科・情報・通信工学専攻 #jobhunt due:2021-03-22
+2021-02-11 IFIP.future.internet.transport #deadlines due:2021-03-25
+2021-02-11 IEEE.DCOSS.urban.computing #deadlines due:2021-03-26
+2021-02-11 ★東京理科大学・工学部情報工学科・インテリジェントシステム分野 #jobhunt due:2021-03-29
+2021-02-11 (J)JNSM.beyond5G #deadlines due:2021-03-30
+2021-02-11 IEEE.ATC.trusted.computing #deadlines due:2021-03-30
+2021-02-11 (J)ACMIntTechJ.multiagent.systems.for.IoT #deadlines due:2021-03-31
+2021-02-11 (J)ACMtran.comp.ling.multimedia.IoT #deadlines due:2021-03-31
+2021-02-11 (J)Elsevier(edge.iot) #deadlines due:2021-03-31
+2021-02-11 (J)Elsevier.smart.veh.in.6G #deadlines due:2021-03-31
+2021-02-11 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
+2021-02-11 BRAINS.blockchain #deadlines due:2021-03-31
+2021-02-11 名古屋大学・大学院工学研究科・教授公募・情報学 #jobhunt due:2021-03-31
+2021-02-11 名古屋大学・知能情報学分野 #jobhunt due:2021-03-31
+2021-02-11 東京工業大学・応用数理分野 #jobhunt due:2021-03-31
+2021-02-11 清水建設株式会社・民間企業の研究員（３D計測技術・ロボティクス） #jobhunt due:2021-03-31
+2021-02-11 福岡大学工学部電子情報工学科 #jobhunt due:2021-03-31
+2021-02-11 鳥取大学工学部教員公募（ロボティクス） #jobhunt due:2021-03-31
+2021-02-11 (J)MDPI.ai.things.readtime.datamon #deadlines due:2021-04-01
+2021-02-11 ITC.teletraffic.congress #deadlines due:2021-04-02
+2021-02-11 (J)IEEE.VTechMag.6gapps #deadlines due:2021-04-05
+2021-02-11 関西大学・ソフトウェア工学 #jobhunt due:2021-04-12
+2021-02-11 EAI.MONAMI.japan.mobile.nets #deadlines due:2021-04-13
+2021-02-11 (J)MDPI.sensors.intelligent.vehicles #deadlines due:2021-04-15
+2021-02-11 GLOBECOM #deadlines due:2021-04-15
+2021-02-11 bestat株式会社・技術責任者・CTO #jobhunt due:2021-04-15
+2021-02-11 東京都市大学・経営情報システム #jobhunt due:2021-04-16
+2021-02-11 東北大学・情報リテラシー論分野 #jobhunt due:2021-04-22
+2021-02-11 群馬大学・情報通信分野 #jobhunt due:2021-04-23
+2021-02-11 香川大学・創造工学部・准教授または講師の公募（機械システムコース） #jobhunt due:2021-04-23
+2021-02-11 東京工科大学コンピュータサイエンス学部・人工知能 #jobhunt due:2021-04-26
+2021-02-11 山口大学・電気電子工学分野 #jobhunt due:2021-04-30
+2021-02-11 岩手大学・知能・メディア情報コース 准教授公募（知能情報学関連分野） #jobhunt due:2021-04-30
+2021-02-11 知能情報学関連分野 #jobhunt due:2021-04-30
+2021-02-11 ACM.GoodIT #deadlines due:2021-05-01
+2021-02-11 (J)tailor.digitaltwin #deadlines due:2021-05-05
+2021-02-11 滋賀県立大学・知能情報工学分野 #jobhunt due:2021-05-07
+2021-02-11 岡山理科大学・准教授・講師または助教（計算機工学，コンピュータシステム分野） #jobhunt due:2021-05-10
+2021-02-11 (J)wiley.SPE.highperfcomp.apps #deadlines due:2021-05-31
+2021-02-11 株式会社ヒューマノーム研究所(5jobs) #jobhunt due:2021-05-31
+2021-02-11 青山学院大学理工学部電気電子工学科 #jobhunt due:2021-05-31
+2021-02-11 (J)MDPI.cloud.based.iot.smartcities #deadlines due:2021-06-01
+2021-02-11 ⒿMDPI.HPC.math #deadlines due:2021-06-30
+2021-02-11 トヨタ自動車株式会社・スマートシティプラットフォームの開発 #jobhunt due:2021-06-30
+2021-02-11 株式会社キーウォーカー【AI企業】自然言語処理研究員・エンジニア募集 #jobhunt due:2021-06-30
+2021-02-11 (J)MDPI.energy.in.networks #deadlines due:2021-07-01
+2021-02-11 能美防災株式会社・センサシステムに関するソフトウェアの製品開発業務 #jobhunt due:2021-07-18
+2021-02-11 能美防災株式会社・センサ応用製品に関する研究開発業務 #jobhunt due:2021-07-19
+2021-02-11 (J)BigDataJournal.perfmanagment.large.clusters #deadlines due:2021-07-31
+2021-02-11 株式会社iMedTechnologies・リードAIエンジニア #jobhunt due:2021-07-31
+2021-02-11 ★株式会社アラヤ・リサーチャー (強化学習) #jobhunt due:2021-08-31
+2021-02-11 ★株式会社アラヤ・計算論的神経科学者・情報理論学者 #jobhunt due:2021-08-31
